--- a/fr/protectiondesdonnees.html
+++ b/fr/protectiondesdonnees.html
@@ -135,17 +135,17 @@
 <p></p>
 <h2>6. Transfert des données personnelles</h2>
 <p>Les données personnelles collectées via formaeffimera.com sont traitées exclusivement au sein de l’Union européenne (UE) et ne sont pas transférées vers des pays tiers ou des organisations internationales en dehors de l’Espace économique européen (EEE), sauf si cela est strictement nécessaire et en conformité avec les dispositions prévues par le Règlement général sur la protection des données (RGPD).</p>
-<h3>Exceptions au transfert des données</h3>
+<p>Exceptions au transfert des données</h3>
 <p>Si le transfert de données vers des pays tiers s’avérait nécessaire :</p>
 <ul>
 <li>Le transfert sera effectué uniquement vers des pays offrant un niveau de protection des données personnelles jugé adéquat par la Commission européenne, ou</li>
 <li>Des mesures de protection supplémentaires seront mises en place, telles que l’utilisation de clauses contractuelles types (Standard Contractual Clauses - SCC) approuvées par la Commission européenne ou d’autres garanties équivalentes prévues par le RGPD.</li>
 </ul>
-<h3>Fournisseurs et outils utilisés</h3>
+<p>Fournisseurs et outils utilisés</h3>
 <p>Le site utilise les fournisseurs et outils suivants pour la gestion du domaine et des contenus :</p>
 <p>1. Register.it : pour la gestion du domaine, conforme aux normes de sécurité et de confidentialité de l’Union européenne.</p>
 <p>2. GitHub : pour la gestion du site et des contenus. Les données gérées via GitHub sont stockées sur des serveurs situés dans l’Union européenne ou protégés de manière adéquate.</p>
-<h3>Absence de transfert non autorisé</h3>
+<p>Absence de transfert non autorisé</h3>
 <p>Aucun transfert de données personnelles vers des pays tiers ne sera effectué sans une communication préalable et, le cas échéant, sans votre consentement explicite.</p>
 <p></p>
 <p></p>
@@ -171,7 +171,7 @@
 <p></p>
 <h2>8. Droits des personnes concernées</h2>
 <p>Conformément au Règlement général sur la protection des données (RGPD), les utilisateurs de formaeffimera.com disposent des droits suivants relatifs à leurs données personnelles :</p>
-<h3>1. Droit d’accès (Article 15 RGPD)</h3>
+<p>1. Droit d’accès (Article 15 RGPD)</h3>
 <p>Vous avez le droit de savoir si vos données personnelles sont traitées et, le cas échéant, d’y accéder, ainsi que d’obtenir des informations sur :</p>
 <ul>
 <li>Les finalités du traitement.</li>
@@ -179,9 +179,9 @@
 <li>Les destinataires ou catégories de destinataires des données.</li>
 <li>La durée de conservation prévue ou les critères permettant de la déterminer.</li>
 </ul>
-<h3>2. Droit de rectification (Article 16 RGPD)</h3>
+<p>2. Droit de rectification (Article 16 RGPD)</h3>
 <p>Vous pouvez demander la correction des données personnelles inexactes ou l’ajout d’informations manquantes.</p>
-<h3>3. Droit à l’effacement (« Droit à l’oubli ») (Article 17 RGPD)</h3>
+<p>3. Droit à l’effacement (« Droit à l’oubli ») (Article 17 RGPD)</h3>
 <p>Vous pouvez demander la suppression de vos données personnelles dans les cas suivants :</p>
 <ul>
 <li>Les données ne sont plus nécessaires aux finalités pour lesquelles elles ont été collectées.</li>
@@ -189,28 +189,28 @@
 <li>Vous vous opposez au traitement et aucun motif légitime impérieux ne le justifie.</li>
 <li>Les données ont été traitées de manière illicite.</li>
 </ul>
-<h3>4. Droit à la limitation du traitement (Article 18 RGPD)</h3>
+<p>4. Droit à la limitation du traitement (Article 18 RGPD)</h3>
 <p>Vous pouvez demander la limitation du traitement de vos données dans les cas suivants :</p>
 <ul>
 <li>Vous contestez l’exactitude des données, pendant la période nécessaire à leur vérification.</li>
 <li>Le traitement est illicite, mais vous préférez limiter l’utilisation des données plutôt que de les supprimer.</li>
 </ul>
-<h3>5. Droit à la portabilité des données (Article 20 RGPD)</h3>
+<p>5. Droit à la portabilité des données (Article 20 RGPD)</h3>
 <p>Vous avez le droit de recevoir vos données personnelles dans un format structuré, couramment utilisé et lisible par machine, et de demander leur transfert direct à un autre responsable du traitement, si cela est techniquement possible.</p>
-<h3>6. Droit d’opposition (Article 21 RGPD)</h3>
+<p>6. Droit d’opposition (Article 21 RGPD)</h3>
 <p>Vous pouvez vous opposer au traitement de vos données personnelles, notamment si celui-ci est basé sur un intérêt légitime ou utilisé à des fins de prospection.</p>
-<h3>7. Droit de ne pas faire l’objet de décisions automatisées (Article 22 RGPD)</h3>
+<p>7. Droit de ne pas faire l’objet de décisions automatisées (Article 22 RGPD)</h3>
 <p>Vous avez le droit de ne pas être soumis à des décisions basées exclusivement sur un traitement automatisé, y compris le profilage, ayant des effets juridiques ou un impact significatif sur vous.</p>
-<h3>8. Comment exercer vos droits</h3>
+<p>8. Comment exercer vos droits</h3>
 <p>Pour exercer vos droits, adressez votre demande à : <a href="mailto:privacy@formaeffimera.com">privacy@formaeffimera.com</a>.</p>
 <p>Votre demande sera traitée dans un délai d’un mois, sauf prolongation pour des cas complexes, auquel cas vous en serez informé.</p>
-<h3>9. Droit de réclamation</h3>
+<p>9. Droit de réclamation</h3>
 <p>Si vous estimez que vos droits ne sont pas respectés, vous pouvez déposer une réclamation auprès de la <a href="https://www.cnil.fr/" target="_blank" rel="noopener noreferrer">Commission Nationale de l’Informatique et des Libertés (CNIL)</a>.</p>
 <p></p>
 <p></p>
 <h2>9. Mises à jour et modifications de la politique de confidentialité</h2>
 <p>formaeffimera.com se réserve le droit de mettre à jour ou de modifier la présente politique de confidentialité à tout moment, conformément aux dispositions légales applicables et aux nécessités opérationnelles du site.</p>
-<h3>Notification des modifications</h3>
+<p>Notification des modifications</h3>
 <p>1. Communication aux utilisateurs</p>
 <p>En cas de modifications significatives, formaeffimera.com informera les utilisateurs via :</p>
 <ul>
@@ -219,11 +219,11 @@
 </ul>
 <p>2. Date d’entrée en vigueur des modifications</p>
 <p>Toute modification prendra effet à la date indiquée dans la version mise à jour de la politique de confidentialité. Les utilisateurs sont invités à consulter régulièrement cette page pour se tenir informés des éventuels changements.</p>
-<h3>Version actuelle</h3>
+<p>Version actuelle</h3>
 <p>La présente politique a été mise à jour pour la dernière fois le 17/11/2024. Les éventuelles modifications ultérieures seront indiquées dans cette section avec leur date de révision.</p>
-<h3>Consentement implicite aux modifications</h3>
+<p>Consentement implicite aux modifications</h3>
 <p>Le fait de continuer à utiliser formaeffimera.com après l’entrée en vigueur des modifications implique l’acceptation des nouvelles conditions.</p>
-<h3>Contacts pour plus de précisions</h3>
+<p>Contacts pour plus de précisions</h3>
 <p>Pour toute question ou demande de clarification concernant les modifications apportées à la politique de confidentialité, les utilisateurs peuvent contacter le responsable du traitement via :</p>
 <ul>
 <li>Email : <a href="mailto:privacy@formaeffimera.com">privacy@formaeffimera.com</a></li>
@@ -233,7 +233,7 @@
 <p></p>
 <h2>10. Sécurité des données personnelles</h2>
 <p>formaeffimera.com met en œuvre des mesures techniques et organisationnelles appropriées pour garantir la sécurité des données personnelles collectées, conformément au RGPD et à la législation nationale applicable. L'objectif principal est de prévenir tout accès non autorisé, divulgation, altération ou destruction des données personnelles.</p>
-<h3>Mesures techniques de sécurité</h3>
+<p>Mesures techniques de sécurité</h3>
 <p>1. Chiffrement</p>
 <p>Les données transmises via le site sont protégées par des protocoles de chiffrement avancés, tels que HTTPS/TLS, afin de garantir la confidentialité des communications entre les utilisateurs et le serveur.</p>
 <p>2. Sauvegardes régulières</p>
@@ -242,29 +242,29 @@
 <p>Les serveurs hébergeant les données sont protégés par des pare-feu et des systèmes de surveillance continue pour prévenir les cyberattaques.</p>
 <p>4. Authentification</p>
 <p>L’accès aux données personnelles est limité au personnel autorisé, qui doit s’authentifier à l’aide de données d’identification uniques et sécurisées.</p>
-<h3>Mesures organisationnelles</h3>
+<p>Mesures organisationnelles</h3>
 <p>1. Accès limité aux données</p>
 <p>Seules les personnes strictement nécessaires aux finalités du traitement (comme les gestionnaires de domaine sur Register.it ou les développeurs sur GitHub) ont accès aux données personnelles, conformément à des politiques de contrôle strictes.</p>
 <p>2. Procédures de gestion des violations</p>
 <p>Des procédures spécifiques sont mises en place pour gérer les éventuelles violations de données personnelles, y compris la notification aux personnes concernées et à la CNIL, lorsque cela est requis.</p>
-<h3>Conservation des données</h3>
+<p>Conservation des données</h3>
 <p>1. Durée de conservation</p>
 <p>Les données personnelles collectées sont conservées uniquement pendant la durée nécessaire à la réalisation des finalités pour lesquelles elles ont été collectées, sauf en cas d’obligations légales exigeant une durée de conservation plus longue.</p>
 <p>2. Suppression sécurisée</p>
 <p>À l’expiration de la durée de conservation, les données personnelles sont supprimées de manière sécurisée, à l’aide de techniques garantissant leur irrécupérabilité.</p>
-<h3>Responsabilités des utilisateurs</h3>
+<p>Responsabilités des utilisateurs</h3>
 <p>Les utilisateurs sont invités à contribuer à la sécurité de leurs propres données :</p>
 <ul>
 <li>En utilisant des mots de passe complexes et en ne les partageant pas avec des tiers.</li>
 <li>En contactant immédiatement <a href="mailto:privacy@formaeffimera.com">privacy@formaeffimera.com</a> en cas de suspicion de compromission de leurs données.</li>
 </ul>
-<h3>Limitations de responsabilité</h3>
+<p>Limitations de responsabilité</h3>
 <p>Bien que formaeffimera.com adopte toutes les mesures raisonnables pour protéger les données personnelles, une sécurité absolue ne peut être garantie, notamment en raison des vulnérabilités inhérentes aux technologies web. Cependant, toute violation de sécurité sera gérée conformément à la réglementation en vigueur.</p>
 <p></p>
 <p></p>
 <h2>11. Réclamations et droits des utilisateurs</h2>
 <p>Les utilisateurs de formaeffimera.com ont le droit de formuler des réclamations concernant le traitement de leurs données personnelles, conformément au RGPD et à la législation française applicable.</p>
-<h3>Présentation des réclamations</h3>
+<p>Présentation des réclamations</h3>
 <p>1. Contact direct avec le responsable</p>
 <p>Les utilisateurs sont encouragés à contacter formaeffimera.com pour résoudre tout problème lié à la gestion des données personnelles. Une demande détaillée peut être envoyée par e-mail à <a href="mailto:privacy@formaeffimera.com">privacy@formaeffimera.com</a>.</p>
 <p>2. Réclamation auprès de la CNIL</p>
@@ -273,7 +273,7 @@
 <li>Site officiel : <a href="https://www.cnil.fr/" target="_blank" rel="noopener noreferrer">https://www.cnil.fr/</a></li>
 <li>Téléphone : +33 (0)1 53 73 22 22</li>
 </ul>
-<h3>Droits des utilisateurs</h3>
+<p>Droits des utilisateurs</h3>
 <p>1. Droit d’accès (article 15 RGPD)</p>
 <p>Les utilisateurs peuvent demander des informations sur les données personnelles traitées par formaeffimera.com, notamment :</p>
 <ul>
@@ -293,7 +293,7 @@
 <p>Les utilisateurs peuvent s’opposer au traitement de leurs données personnelles pour des motifs légitimes.</p>
 <p>7. Droit de ne pas faire l’objet de décisions automatisées (article 22 RGPD)</p>
 <p>Les utilisateurs ont le droit de ne pas être soumis à des décisions basées exclusivement sur des traitements automatisés, y compris le profilage, ayant des effets significatifs sur eux.</p>
-<h3>Exercice des droits</h3>
+<p>Exercice des droits</h3>
 <p>Les utilisateurs peuvent exercer leurs droits en envoyant une demande écrite à :</p>
 <ul>
 <li>Email : <a href="mailto:privacy@formaeffimera.com">privacy@formaeffimera.com</a></li>
@@ -304,7 +304,7 @@
 <p></p>
 <h2>12. Mesures de sécurité</h2>
 <p>formaeffimera.com met en œuvre des mesures de sécurité techniques et organisationnelles appropriées pour protéger les données personnelles des utilisateurs contre tout accès non autorisé, perte, altération ou divulgation. Ces mesures respectent les exigences des articles 32 à 34 du RGPD et de la législation française applicable.</p>
-<h3>Mesures techniques</h3>
+<p>Mesures techniques</h3>
 <p>1. Chiffrement des données</p>
 <p>Les données personnelles sont protégées grâce à l’utilisation de protocoles de chiffrement lors de leur transmission et, lorsque cela est possible, lors de leur stockage.</p>
 <p>Le site utilise le protocole HTTPS pour garantir des communications sécurisées.</p>
@@ -316,14 +316,14 @@
 <p>Des procédures de récupération des données sont prévues en cas d’incident.</p>
 <p>4. Protection contre les cyberattaques</p>
 <p>Des systèmes de pare-feu, d’antivirus et des logiciels de surveillance continue protègent le site contre les accès malveillants et les vulnérabilités.</p>
-<h3>Mesures organisationnelles</h3>
+<p>Mesures organisationnelles</h3>
 <p>1. Formation et sensibilisation</p>
 <p>Les personnes impliquées dans la gestion des données personnelles reçoivent une formation spécifique sur le RGPD et les mesures de sécurité.</p>
 <p>2. Politiques internes</p>
 <p>Des procédures internes documentées encadrent la gestion des données personnelles et la réponse aux éventuelles violations.</p>
 <p>3. Contrats avec des tiers</p>
 <p>Toutes les tierces parties impliquées dans le traitement des données (par exemple, GitHub ou Register.it) sont liées par des contrats garantissant leur conformité au RGPD.</p>
-<h3>Gestion des violations de données</h3>
+<p>Gestion des violations de données</h3>
 <p>1. Plan de réponse aux violations</p>
 <p>En cas de violation des données personnelles, formaeffimera.com appliquera le plan de réponse suivant :</p>
 <ul>
@@ -332,10 +332,9 @@
 </ul>
 <p>2. Registre des violations</p>
 <p>Toutes les violations sont consignées dans un registre interne, même si aucune notification formelle n’est requise.</p>
-<h3>Mise à jour des mesures de sécurité</h3>
+<p>Mise à jour des mesures de sécurité</h3>
 <p>formaeffimera.com surveille en continu ses infrastructures afin d’adapter ses mesures de sécurité aux nouvelles technologies, aux menaces émergentes et aux exigences réglementaires.</p>
 <p></p>
-
     </div>
 </body>
 </html>
