--- a/en/privacy.html
+++ b/en/privacy.html
@@ -133,23 +133,23 @@
 <p></p>
 <h2>6. Transfer of Personal Data</h2>
 <p>The personal data collected through formaeffimera.com are processed within the European Union and are not transferred to third countries or international organizations outside the European Economic Area (EEA), unless strictly necessary and in compliance with the provisions of the General Data Protection Regulation (GDPR).</p>
-<h3>Exceptions to Data Transfer</h3>
+<p>Exceptions to Data Transfer</h3>
 <p>Should it become necessary to transfer data to third countries:</p>
 <ul>
 <li>The transfer will only occur to countries that ensure an adequate level of personal data protection as recognized by the European Commission, or</li>
 <li>Additional protective measures will be implemented, such as the use of Standard Contractual Clauses (SCC) approved by the European Commission or other equivalent guarantees as provided under the GDPR.</li>
 </ul>
-<h3>Providers and Tools Used</h3>
+<p>Providers and Tools Used</h3>
 <p>The site uses the following providers and tools for domain and content management:</p>
 <p>1. Register.it: for domain registration, compliant with European Union security and privacy standards.</p>
 <p>2. GitHub: for site and content management, operating in compliance with the GDPR. Data managed via GitHub are stored on servers located within the European Union or adequately protected.</p>
-<h3>No Unauthorized Transfers</h3>
+<p>No Unauthorized Transfers</h3>
 <p>No personal data transfers to third countries will occur without prior notice and, where required, without your explicit consent.</p>
 <p></p>
 <p></p>
 <h2>7. Security of Personal Data</h2>
 <p>formaeffimera.com implements appropriate technical and organizational measures to ensure the security of personal data and to protect them against unauthorized access, loss, destruction, alteration, or unauthorized disclosure, in compliance with Article 32 of the GDPR.</p>
-<h3>Technical Measures Implemented</h3>
+<p>Technical Measures Implemented</h3>
 <p>1. Data Encryption</p>
 <p>Personal data transmitted through the site are protected using security protocols such as HTTPS, which ensure encryption during transmission.</p>
 <p>2. Limited Access</p>
@@ -158,12 +158,12 @@
 <p>The servers hosting the data and content of formaeffimera.com are managed in secure environments, protected by firewalls, intrusion detection systems, and controlled access.</p>
 <p>4. Data Backup</p>
 <p>Technical and operational data are regularly backed up to ensure information recovery in the event of malfunctions or incidents.</p>
-<h3>Risk Mitigation</h3>
+<p>Risk Mitigation</h3>
 <p>1. Monitoring and Updates</p>
 <p>The system undergoes continuous monitoring to identify and address potential security vulnerabilities. The software tools used are regularly updated to prevent risks associated with known security flaws.</p>
 <p>2. Credential Management</p>
 <p>Access to site management tools is secured with strong credentials and, where possible, two-factor authentication (2FA).</p>
-<h3>Notification Obligation</h3>
+<p>Notification Obligation</h3>
 <p>In the event of a personal data breach, formaeffimera.com is committed to notifying the relevant Data Protection Authority and, where required, the affected individuals, in accordance with Articles 33 and 34 of the GDPR.</p>
 <p></p>
 <p></p>
@@ -209,7 +209,7 @@
 <p></p>
 <h2>9. Updates and Changes to the Privacy Policy</h2>
 <p>formaeffimera.com reserves the right to update or modify this privacy policy at any time, in compliance with applicable legal provisions and the operational needs of the site.</p>
-<h3>Notification of Changes</h3>
+<p>Notification of Changes</h3>
 <p>1. Communication to Users</p>
 <p>In the event of significant changes, formaeffimera.com will inform users through:</p>
 <ul>
@@ -218,11 +218,11 @@
 </ul>
 <p>2. Effective Date of Changes</p>
 <p>All changes will take effect on the date specified in the updated privacy policy. Users are encouraged to periodically review this page to stay informed about any updates.</p>
-<h3>Current Version</h3>
+<p>Current Version</h3>
 <p>This privacy policy was last updated on 17/11/2024. Any subsequent changes will be noted in this section with the corresponding revision date.</p>
-<h3>Implicit Consent to Changes</h3>
+<p>Implicit Consent to Changes</h3>
 <p>Continued use of formaeffimera.com following the effective date of the changes constitutes acceptance of the updated terms.</p>
-<h3>Contact for Clarifications</h3>
+<p>Contact for Clarifications</h3>
 <p>For questions or requests for clarification regarding changes to the privacy policy, users can contact the data controller via:</p>
 <ul>
 <li>Email: <a href="mailto:privacy@formaeffimera.com">privacy@formaeffimera.com</a></li>
@@ -232,7 +232,7 @@
 <p></p>
 <h2>10. Security of Personal Data</h2>
 <p>formaeffimera.com adopts appropriate technical and organizational measures to ensure the security of personal data collected, in compliance with the GDPR and applicable national regulations. The primary objective is to prevent unauthorized access, disclosure, alteration, or destruction of personal data.</p>
-<h3>Technical Security Measures</h3>
+<p>Technical Security Measures</h3>
 <p>1. Encryption</p>
 <p>Data transmitted through the site are protected using advanced encryption protocols, such as HTTPS/TLS, to ensure the confidentiality of communications between users and the server.</p>
 <p>2. Regular Backups</p>
@@ -241,34 +241,34 @@
 <p>Servers hosting the data are protected by firewalls and continuous monitoring systems to prevent cyberattacks.</p>
 <p>4. Authentication</p>
 <p>Access to personal data is restricted to authorized personnel who must authenticate using unique and secure credentials.</p>
-<h3>Organizational Measures</h3>
+<p>Organizational Measures</h3>
 <p>1. Limited Access to Data</p>
 <p>Only individuals strictly necessary for processing purposes (such as domain managers at Register.it or developers at GitHub) have access to personal data, based on strict control policies.</p>
 <p>2. Data Breach Management Procedures</p>
 <p>Specific procedures are in place to manage potential personal data breaches, including notification to affected individuals and the relevant Data Protection Authority, where required.</p>
-<h3>Data Retention</h3>
+<p>Data Retention</h3>
 <p>1. Retention Period</p>
 <p>Personal data collected will be retained only for the time necessary to achieve the purposes for which they were collected, unless legal obligations require longer retention periods.</p>
 <p>2. Secure Deletion</p>
 <p>Once the retention period has expired, personal data will be securely deleted using techniques that ensure their irrecoverability.</p>
-<h3>User Responsibilities</h3>
+<p>User Responsibilities</h3>
 <p>Users are encouraged to contribute to the security of their data by:</p>
 <ul>
 <li>Using strong passwords and not sharing them with third parties.</li>
 <li>Promptly contacting <a href="mailto:privacy@formaeffimera.com">privacy@formaeffimera.com</a> in case of suspected compromise of their data.</li>
 </ul>
-<h3>Limitations of Liability</h3>
+<p>Limitations of Liability</h3>
 <p>While all reasonable measures are taken to protect personal data, formaeffimera.com cannot guarantee absolute security, particularly in relation to inherent vulnerabilities in web technologies. However, any security breaches will be handled in accordance with applicable regulations.</p>
 <p></p>
 <p></p>
 <h2>11. Complaints and User Rights</h2>
 <p>Users of formaeffimera.com have the right to lodge complaints regarding the processing of their personal data, in compliance with the GDPR and applicable regulations.</p>
-<h3>Filing Complaints</h3>
+<p>Filing Complaints</h3>
 <p>1. Direct Contact with the Controller</p>
 <p>Users are encouraged to contact formaeffimera.com to resolve any issues related to the management of personal data. You can send an email to <a href="mailto:privacy@formaeffimera.com">privacy@formaeffimera.com</a> with a detailed description of the matter.</p>
 <p>2. Complaint to the Data Protection Authority</p>
 <p>If users believe that their rights have been violated, they can lodge a complaint with the relevant supervisory authority in their jurisdiction or the appropriate Data Protection Authority within the EU.</p>
-<h3>User Rights</h3>
+<p>User Rights</h3>
 <p>1. Right of Access (Art. 15 GDPR)</p>
 <p>Users can request information about the personal data processed by formaeffimera.com, including:</p>
 <ul>
@@ -288,7 +288,7 @@
 <p>Users can object to the processing of their personal data on legitimate grounds.</p>
 <p>7. Right Not to Be Subject to Automated Decision-Making (Art. 22 GDPR)</p>
 <p>Users have the right not to be subjected to decisions based solely on automated processing, including profiling, that have significant effects on them.</p>
-<h3>Exercising Rights</h3>
+<p>Exercising Rights</h3>
 <p>Users can exercise their rights by submitting a written request to:</p>
 <ul>
 <li>Email: <a href="mailto:privacy@formaeffimera.com">privacy@formaeffimera.com</a></li>
@@ -299,7 +299,7 @@
 <p></p>
 <h2>12. Security Measures</h2>
 <p>formaeffimera.com adopts appropriate technical and organizational security measures to protect users' personal data from unauthorized access, loss, alteration, or disclosure. These measures comply with the requirements set out in the GDPR (Articles 32-34).</p>
-<h3>Technical Measures</h3>
+<p>Technical Measures</h3>
 <p>Data Encryption</p>
 <p>1. Personal data are protected using encryption protocols during transmission and, where possible, during storage.</p>
 <p>The site uses the HTTPS protocol to ensure secure communication.</p>
@@ -311,14 +311,14 @@
 <p>Data recovery procedures are in place in case of incidents.</p>
 <p>Protection from Cyber Attacks</p>
 <p>4. Firewalls, antivirus systems, and continuous monitoring software protect the site from malicious access and vulnerabilities.</p>
-<h3>Organizational Measures</h3>
+<p>Organizational Measures</h3>
 <p>Training and Awareness</p>
 <p>1. Individuals handling personal data receive specific training on GDPR regulations and security measures.</p>
 <p>Internal Policies</p>
 <p>2. Documented internal procedures govern the management of personal data and responses to potential breaches.</p>
 <p>Contracts with Third Parties</p>
 <p>3. All third parties involved in data processing (e.g., GitHub or Register.it) are bound by contracts ensuring GDPR compliance.</p>
-<h3>Data Breach Management</h3>
+<p>Data Breach Management</h3>
 <p>Response Plan</p>
 <p>1. In the event of a personal data breach, formaeffimera.com will follow the response plan below:</p>
 <ul>
@@ -327,7 +327,7 @@
 </ul>
 <p>Incident Log</p>
 <p>2. All breaches are documented in an internal log, regardless of whether formal notification is required.</p>
-<h3>Updating Security Measures</h3>
+<p>Updating Security Measures</h3>
 <p>formaeffimera.com continuously monitors its infrastructure to adapt security measures to new technologies, emerging threats, and regulatory requirements.</p>
 <p></p>
 
