--- a/fr/index.html
+++ b/fr/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="icon" href="img/icon.png" type="image/png">
-    <link rel="stylesheet" href="https://formaeffimera.com/style.css">
+    <link rel="stylesheet" href="https://formaeffimera.com/styles.css">
     <style>
         /* Importa i font */
         @font-face {
