--- a/index.html
+++ b/index.html
@@ -223,8 +223,7 @@
         <div>doc23<br>documento ventitreesimo</div>
         <div>doc24<br>documento ventiquattresimo</div>
         <div>doc25<br>documento venticinquesimo</div>
-        <div>doc26<br>Contatti</div>
-        <div>
+        <div>doc26<br>
             <a href="/contacts" style="color: white; text-decoration: none;">
                 Contatti
             </a>
