--- a/fr/index.html
+++ b/fr/index.html
@@ -224,13 +224,13 @@
         <div>doc23<br>document vingt-troisième</div>
         <div>doc24<br>document vingt-quatrième</div>
         <div>doc25<br>document vingt-cinquième</div>
-        <div>
+        <div>doc26<br>
             <a href="/fr/contacts" style="color: white; text-decoration: none;">
                 Contacts
             </a>
         </div>
 
-        <div>
+        <div>doc27<br>
             <a href="/fr/protectiondesdonnees" style="color: white; text-decoration: none;">
                 Politique de confidentialité
             </a>
