--- a/en/index.html
+++ b/en/index.html
@@ -224,13 +224,13 @@
         <div>doc23<br>twenty-third document</div>
         <div>doc24<br>twenty-fourth document</div>
         <div>doc25<br>twenty-fifth document</div>
-        <div>
+        <div>doc26<br>
             <a href="/en/contacts" style="color: white; text-decoration: none;">
                 Contacts
             </a>
         </div>
 
-        <div>
+        <div>doc27<br>
             <a href="/en/privacy" style="color: white; text-decoration: none;">
                 Privacy policy
             </a>
