--- a/index.html
+++ b/index.html
@@ -199,7 +199,11 @@
         </div>
         
         <!-- Altre celle -->
-        <div>doc02<br>documento secondo</div>
+        <div>doc03<br>
+            <a href="/horrorvacui" style="color: white; text-decoration: none;">
+                Horror Vacui
+            </a>
+        </div>
         <div>doc03<br>documento terzo</div>
         <div>doc04<br>documento quarto</div>
         <div>doc05<br>documento quinto</div>
