--- a/horrorvacui.html
+++ b/horrorvacui.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Horror Vacui</title>
-    <!-- Inserimento di un riferimento a un CSS globale -->
-    <link rel="stylesheet" href="/global/styles.css">
     <style>
         /* Resetta margini e padding */
         * {
@@ -55,9 +53,9 @@
 <body>
     <div class="scroll-container">
         <!-- Prima copia dell'immagine SVG -->
-        <img src="/global/svg/HR.svg" alt="Horror Vacui Graphic" class="scrolling-image">
+        <img src="https://formaeffimera.com/svg/HR.svg" alt="Horror Vacui Graphic" class="scrolling-image">
         <!-- Seconda copia dell'immagine SVG per continuità -->
-        <img src="/global/svg/HR.svg" alt="Horror Vacui Graphic" class="scrolling-image">
+        <img src="https://formaeffimera.com/svg/HR.svg" alt="Horror Vacui Graphic" class="scrolling-image">
     </div>
 </body>
 </html>
